--- a/src/components/Item/item.css
+++ b/src/components/Item/item.css
@@ -4,16 +4,21 @@
     width: 200px;
     height: 350px;
     border-radius: 15px;
+    display: flex;
+    /* flex-direction: column; */
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: space-between;
 }
 .cards img{
     width: 100%;
-    height: 200px;
+    height: 240px;
     object-fit: cover;
+    background-size: 100%;
 }
 
 .cards h3, h4{
-    margin-top: 10px;
-    margin-bottom: 6px;
+    width: 100%;
 }
 .ver-detalle{
     font-size: small;
