--- a/src/components/Item/item.css
+++ b/src/components/Item/item.css
@@ -10,6 +10,11 @@
     justify-content: center;
     align-content: space-between;
 }
+
+.cards:hover{
+    transform: scale(1.4);
+}
+
 .cards img{
     width: 100%;
     height: 240px;
