--- a/src/components/ItemList/itemList.css
+++ b/src/components/ItemList/itemList.css
@@ -1,6 +1,11 @@
 .contenedor{
     display: flex;
     justify-content: space-evenly;
+    align-items: flex-start;
     flex-wrap: wrap;
-    gap: 20px;
+    gap: 60px;
+    height: 100%;
+    height: 150vh;
+    background-size: 100%;
 }
+
