--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -31,15 +31,14 @@ img{
 }
 
 .Item-Lista{
-    /* margin: 20px; */
     height: 100%;
     background-image: url(../../Img/fondo.jpg);
     background-size: 100%;
-    /* object-fit: cover; */
 }
-.Item-Lista h1{
-    /* margin: 15px; */
+.Item-h1{
     text-align: center;
+    padding-top: 50px;
+    margin-bottom: 80px;
 }
 
 .agregar-carrito{
